ADD: Crwder free simulations and other examples

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@
 cobra_docker/work/.idea/*
 *.html
 
+# Figures
+*.pdf
+*.png
+*.tiff
+
 ###########################################
 ###	Standard Python	.gitignore	###
 ###########################################
