--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ cobra_docker/work/.idea/*
 *.pdf
 *.png
 *.tiff
+*.csv
 
 ###########################################
 ###	Standard Python	.gitignore	###
