--- a/docker/Dockerfile.ci
+++ b/docker/Dockerfile.ci
@@ -1,7 +1,7 @@
 FROM danielweilandt/geek_docker:latest
 ENTRYPOINT []
 USER root
-COPY ./../ /geek
+COPY . /geek
 USER user
 RUN pip install --user pytest-cov
 RUN pip install --user /geek
